# bin2c

./: CMakeLists.txt  README.md  cleanall.sh  configure.sh
data/: default.json
src/: bin2c.c  bin2c.h  config.c  config.h  fileutils.c  fileutils.h  get_substr.c  get_substr.h  jsmn.c  jsmnhelper.c  jsmnhelper.h  main.c  main.h  seethe.h  stringhelpers.c  stringhelpers.h  verbose_seethe.h
